# iron-key

./: .gitignore  Cargo.toml  rustc-ice-2025-05-27T20_54_56-11490.txt  rustc-ice-2025-05-29T15_40_33-33084.txt  rustc-ice-2025-05-29T20_07_43-75078.txt  rustc-ice-2025-05-30T14_13_25-19234.txt  rustc-ice-2025-05-30T14_25_15-25425.txt  rustc-ice-2025-06-19T14_01_26-55887.txt  rustc-ice-2025-08-20T14_49_47-36211.txt  rustc-ice-2025-08-22T19_34_44-52743.txt
arithmetic/: Cargo.toml
arithmetic/benches/: bench.rs
arithmetic/src/: lib.rs  multilinear_polynomial.rs  univariate_polynomial.rs  util.rs  virtual_polynomial.rs
iron-key/: Cargo.toml
iron-key-bench/: Cargo.toml
iron-key-bench/benches/: audit.rs  bench.rs  client_lookup.rs  kzh.rs  kzh_opening.rs  server_lookup.rs  server_update.rs  server_update_keys.rs  server_update_reg.rs
iron-key-bench/src/: lib.rs
iron-key/src/: errors.rs  ironkey.rs  lib.rs  utils.rs
iron-key/src/auditor/: errors.rs  mod.rs
iron-key/src/bb/: dummybb.rs  errors.rs  mod.rs
iron-key/src/client/: errors.rs  mod.rs
iron-key/src/kzh/: mod.rs  structs.rs
iron-key/src/server/: errors.rs  mod.rs  tests.rs
iron-key/src/structs/: dictionary.rs  lookup.rs  mod.rs  pp.rs  self_audit.rs  update.rs
plots/: audit  audit.csv  client.csv  client_lookup  client_lookup.csv  kzh4-server-key-reg  kzh4-server-key-update  kzh4_audit  kzh4_client_lookup  plot.gnuplot  server.csv  server_key_update  server_key_update.csv  server_lookup  server_lookup.csv  server_reg_update  server_reg_update.csv  server_update.csv  sizes.csv
results/: audit.txt  audit_4.txt  client_lookup.txt  client_lookup_4.txt  kzh_opening.txt  server_key_update.txt  server_key_update_4.txt  server_lookup.txt  server_lookup_4.txt  server_pk.txt  server_pk_4.txt  update_reg.txt  update_reg_4.txt
subroutines/: Cargo.toml
subroutines/src/: lib.rs  poly.rs
subroutines/src/pcs/: errors.rs  mod.rs  prelude.rs
subroutines/src/pcs/kzh/: mod.rs  poly.rs  srs.rs  structs.rs  tests.rs
subroutines/src/pcs/kzh2/: mod.rs  srs.rs  structs.rs  tests.rs
subroutines/src/pcs/kzh4/: mod.rs  srs.rs  structs.rs  tests.rs
subroutines/src/pcs/kzhk/: mod.rs  msm.rs  srs.rs  structs.rs  test.rs
subroutines/src/poly_iop/: errors.rs  mod.rs  prelude.rs  structs.rs  utils.rs
subroutines/src/poly_iop/sum_check/: mod.rs  prover.rs  verifier.rs
subroutines/src/poly_iop/zero_check/: mod.rs
transcript/: Cargo.toml
