[workspace]

members = ["iron-key", "iron-key-bench"]

# Add dependencies here

[workspace.dependencies]

# Arkworks dependencies
ark-serialize = { version = "0.5.0", default-features = false, features = [
    "derive",
] }
ark-std = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
ark-piop = { git = "https://github.com/alireza-shirzad/ark-piop", default-features = false }

# Other dependencies
rayon = { version = "1.5.2", default-features = false }
thiserror = "2.0.12"
sha2 = "0.10"
fake = { version = "4.3.0", default-features = false }
# Testing dependencies
ark-test-curves = { version = "0.5.0", default-features = false, features = [
    "bls12_381_curve",
] }
divan = "0.1.17"

[workspace.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "../docs-header.html"]

[patch.crates-io]
ark-std = { git = "https://github.com/arkworks-rs/std" }
