[workspace]

members = [
    "iron-key",
    "iron-key-bench",
    "arithmetic",
    "subroutines",
    "transcript",
    "util",
]

# Add dependencies here

[workspace.dependencies]

# Arkworks dependencies
ark-serialize = { version = "0.5.0", default-features = false, features = [
    "derive",
] }
ark-std = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
# Other dependencies
rayon = { version = "1.5.2", default-features = false }
thiserror = "2.0.12"
sha2 = "0.10"
fake = { version = "4.3.0", default-features = false }
num-bigint = { version = "0.4.4", default-features = false }
# Testing dependencies
ark-bls12-381 = "0.5.0"
divan = "0.1.17"
rand = "0.9.1"
derivative = "2.2.0"
[workspace.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "../docs-header.html"]

[patch.crates-io]
ark-std = { git = "https://github.com/arkworks-rs/std" }
