[package]
name = "subroutines"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arithmetic = { path = "../arithmetic" }
ark-bn254 = { version = "0.5.0", default-features = false, features = [
    "curve",
] }
ark-ec = { version = "^0.5.0", default-features = false }
ark-ff = { version = "^0.5.0", default-features = false }
ark-poly = { version = "^0.5.0", default-features = false }
ark-serialize = { version = "^0.5.0", default-features = false }
ark-std = { version = "^0.5.0", default-features = false }
derivative = { version = "2", features = ["use_core"] }
displaydoc = { version = "0.2.3", default-features = false }
# itertools = { version = "0.13.0", optional = true }
rand_chacha = { version = "0.3.0", default-features = false }
rayon = { version = "1.8", default-features = false, optional = true }
rand = { version = "0.9.1", default-features = false }
transcript = { path = "../transcript" }
util = { path = "../util" }


[features]
# extensive sanity checks that are useful for debugging
extensive_sanity_checks = []
parallel = [
    "rayon",
    # "itertools",
    "ark-std/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-ec/parallel",
    "util/parallel",
    "arithmetic/parallel",
]
print-trace = ["arithmetic/print-trace", "ark-std/print-trace"]
